--- a/styles/components/thumbnail.css
+++ b/styles/components/thumbnail.css
@@ -38,7 +38,7 @@
       border: 1px solid var(--admin-green);
     }
     &.thumbnail--dark {
-      color: var(--text-color:);
+      color: var(--text-color);
     }
   }
 }
