--- a/styles/variables.css
+++ b/styles/variables.css
@@ -33,7 +33,7 @@
   /* =================================
   Typography (copy-paste from internet design...)
   ================================== */
-  --sans-serif: Raleway, Verdana, Arial, sans-serif;
+  --sans-serif: Verdana, Arial, sans-serif;
   --serif: Montserrat, Georgia, 'Times New Roman', serif;
   --light: 300;
   --normal: 400;
