--- a/styles/components/folders.css
+++ b/styles/components/folders.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
-  padding: var(--padding-large) 0;
+  margin-top: var(--spacing-large);
 }
 
 .folder__title {
@@ -19,7 +19,7 @@
 
 .folder__icon {
   transform: rotate(0);
-  transition: transform 0.5s;
+  transition: transform 0.15s;
 }
 
 .folder--open .folder__icon {
@@ -31,12 +31,12 @@
   flex: 0 0 0;
   flex-wrap: wrap;
   justify-content: flex-start;
-  padding: var(--padding-xlarge) 0;
+  padding: var(--spacing-xlarge) 0;
 }
 
 .folder-item {
   position: relative;
-  margin: var(--margin-xlarge) var(--margin-xlarge) 0 0;
+  margin: var(--spacing-xlarge) var(--spacing-xlarge) 0 0;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   &:hover {
