--- a/styles/components/tabs.css
+++ b/styles/components/tabs.css
@@ -5,14 +5,14 @@
 .tabs__header {
   padding: 0;
   margin: 0;
-  padding: var(--padding-small);
-  margin-bottom: var(--margin-large);
+  padding: var(--spacing-small);
+  margin-bottom: var(--spacing-large);
   list-style: none;
 }
 
 .tabs__tab {
   display: inline-block;
-  margin-right: var(--margin-xlarge);
+  margin-right: var(--spacing-xlarge);
   text-transform: uppercase;
   & a,
   & a:visited,
@@ -35,7 +35,7 @@
     margin-bottom: 0;
   }
   & .tabs__tab {
-    margin-right: var(--margin-medium);
+    margin-right: var(--spacing-medium);
   }
 }
 
