--- a/styles/components/thumbnail.css
+++ b/styles/components/thumbnail.css
@@ -3,12 +3,12 @@
   flex: 0 0 0;
   flex-wrap: wrap;
   justify-content: flex-start;
-  padding: var(--padding-xlarge) 0;
+  padding: var(--spacing-xlarge) 0;
 }
 
 .thumbnail {
   position: relative;
-  margin: var(--margin-xlarge) var(--margin-large) 0 var(--margin-large);
+  margin: var(--spacing-xlarge) var(--spacing-large) 0 var(--spacing-large);
   border: 1px solid var(--admin-dialog);
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -61,7 +61,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: var(--padding-large);
+  padding: var(--spacing-large);
   height: 100%;
 }
 
@@ -84,6 +84,6 @@
 }
 
 .thumbnail__image-info {
-  margin-top: var(--margin-large);
+  margin-top: var(--spacing-large);
   text-align: center;
 }
