--- a/styles/components/forms.css
+++ b/styles/components/forms.css
@@ -5,13 +5,19 @@
     border: 1px solid #d5d5d5;
   }
 
-  & input:focus,
-  & input:active,
+  & input[type=text]:focus,
+  & input[type=text]:active,
   & select:focus,
   & select:active {
     border: 1px solid #7a7d7d;
     box-shadow: inset 0 -2px 0 0 var(--admin-green);
     background-color: #f7fffd;
+  }
+
+  & input[type="checkbox"],
+  & input[type="radio"] {
+    display: inline-block;
+    width: auto;
   }
 }
 
@@ -51,6 +57,23 @@
   }
 }
 
+.admin-form__control-group--inline label{
+  & .admin-form__label {
+    margin-left: var(--spacing-xsmall);
+  }
+  & input {
+    margin-bottom: 3px;
+  }
+  & .admin-form__error-text {
+    display: block;
+  }
+}
+
+.admin-form__label--not-required {
+  font-size: 75%;
+  margin-left: var(--spacing-xsmall);
+}
+
 .admin-form__button-container--center {
   display: flex;
   justify-content: center;
@@ -64,8 +87,7 @@
 .admin-form__error-wrapper {
   & input[type=text],
   & textarea,
-  & select,
-  & form__radio-label {
+  & select {
     background-color: #fdf5f6 !important;
     border: 1px solid var(--red);
     box-shadow: 0 0 2px 0 var(--red) ;
@@ -86,6 +108,13 @@
   .admin-form__label {
     display: inline-block;
     margin-bottom: var(--spacing-small);
+  }
+
+  .admin-form__control-group--inline {
+    margin-bottom: var(--spacing-small);
+    & .admin-form__label {
+      margin-bottom: 0;
+    }
   }
 
   .admin-form__button-submit {
