--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,6 +11,7 @@
   --dark-grey: #8A9097;
   --placeholder: #9197a3;
   --red: #D64D4F;
+  --peach: #F06A48;
   --admin-primary: #303030;
   --admin-primary_expanded: #3D3D3D;
   --admin-tool_active: #4E4E4E;
