--- a/styles/components/forms.css
+++ b/styles/components/forms.css
@@ -102,7 +102,7 @@
     margin-top: var(--spacing-xlarge);
     & .admin-form__label {
       display: inline-block;
-      margin-bottom: var(--spacing-small);
+      margin-bottom: var(--spacing-xsmall);
     }
 
     & .admin-form__control-group--inline {
