feat: disable class for formatting-button

--- a/styles/components/editor.css
+++ b/styles/components/editor.css
@@ -46,6 +46,11 @@
   }
 }
 
+.formatting-button--disabled {
+  cursor: default;
+  color: grey;
+}
+
 .formatting-button_active {
   background-color: var(--dark-grey);
 }
