--- a/styles/variables.css
+++ b/styles/variables.css
@@ -46,6 +46,7 @@
   --font-size-nav: 13px;
   --font-size-search-input: 13px;
   --font-size-tag: 13px;
+  --font-size-xsmalltext: 10px;
   --font-size-smalltext: 13px;
   --font-size-button: 13px;
   --font-size-hero-large: 72px;
