--- a/styles/components/pagelist.css
+++ b/styles/components/pagelist.css
@@ -1,5 +1,5 @@
 .admin-pagelist__wrapper {
-  max-width: 1200px;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
@@ -42,6 +42,7 @@
 .admin-pagelist__item__page-status-text {
   display: none;
   margin-left: 10px;
+  opacity: 0.8;
 }
 
 @media(--breakpoint-sm) {
