feat: Added form summary error style

--- a/styles/components/forms.css
+++ b/styles/components/forms.css
@@ -97,6 +97,13 @@
     }
   }
 }
+.form__error{
+  & .form__error-summary{
+    font-size: 0.9rem;
+    margin-top: var(--spacing-xsmall);
+    color: var(--red);
+  }
+}
 
 @media (--breakpoint-md) {
   .admin-form {
