--- a/styles/components/menu.css
+++ b/styles/components/menu.css
@@ -8,6 +8,7 @@
   visibility: visible;
   opacity: 1;
   transition: visibility 0s, opacity 0.5s ease;
+  color: var(--text-color);
 }
 
 .admin-edit__button {
